# shopping_agent

./: .env.example  .gitignore  README.md  inventory.json  pyproject.toml  run.py
src/agent/: __init__.py  config.py  constants.py  core.py  main.py  session.py  tools.py  types.py
src/agent/providers/: __init__.py  llm.py  stt.py  tts.py
src/web/: app.py  server.py
src/web/static/: app.js  style.css
src/web/templates/: index.html
